// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`hl7v2Parser > Empty messages > should handle empty messages 1`] = `
{
  "children": [],
  "delimiter": "
",
  "position": {
    "end": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`hl7v2Parser > MSH segment > should parse a basic MSH segment 1`] = `
{
  "children": [
    {
      "children": [
        {
          "index": 0,
          "position": {
            "end": {
              "column": 4,
              "line": 1,
              "offset": 3,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "header",
          "value": "MSH",
        },
        {
          "index": 1,
          "position": {
            "end": {
              "column": 5,
              "line": 1,
              "offset": 4,
            },
            "start": {
              "column": 4,
              "line": 1,
              "offset": 3,
            },
          },
          "type": "field",
          "value": "|",
        },
        {
          "index": 2,
          "position": {
            "end": {
              "column": 9,
              "line": 1,
              "offset": 8,
            },
            "start": {
              "column": 5,
              "line": 1,
              "offset": 4,
            },
          },
          "type": "field",
          "value": "^~\\&",
        },
        {
          "index": 3,
          "position": {
            "end": {
              "column": 21,
              "line": 1,
              "offset": 20,
            },
            "start": {
              "column": 10,
              "line": 1,
              "offset": 9,
            },
          },
          "type": "field",
          "value": "SENDING_APP",
        },
        {
          "index": 4,
          "position": {
            "end": {
              "column": 33,
              "line": 1,
              "offset": 32,
            },
            "start": {
              "column": 22,
              "line": 1,
              "offset": 21,
            },
          },
          "type": "field",
          "value": "SENDING_FAC",
        },
        {
          "index": 5,
          "position": {
            "end": {
              "column": 47,
              "line": 1,
              "offset": 46,
            },
            "start": {
              "column": 34,
              "line": 1,
              "offset": 33,
            },
          },
          "type": "field",
          "value": "RECEIVING_APP",
        },
        {
          "index": 6,
          "position": {
            "end": {
              "column": 61,
              "line": 1,
              "offset": 60,
            },
            "start": {
              "column": 48,
              "line": 1,
              "offset": 47,
            },
          },
          "type": "field",
          "value": "RECEIVING_FAC",
        },
        {
          "index": 7,
          "position": {
            "end": {
              "column": 76,
              "line": 1,
              "offset": 75,
            },
            "start": {
              "column": 62,
              "line": 1,
              "offset": 61,
            },
          },
          "type": "field",
          "value": "20110613061611",
        },
        {
          "index": 8,
          "position": {
            "end": {
              "column": 77,
              "line": 1,
              "offset": 76,
            },
            "start": {
              "column": 77,
              "line": 1,
              "offset": 76,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "children": [
            {
              "index": 0,
              "position": {
                "end": {
                  "column": 81,
                  "line": 1,
                  "offset": 80,
                },
                "start": {
                  "column": 78,
                  "line": 1,
                  "offset": 77,
                },
              },
              "type": "component",
              "value": "ADT",
            },
            {
              "index": 1,
              "position": {
                "end": {
                  "column": 85,
                  "line": 1,
                  "offset": 84,
                },
                "start": {
                  "column": 82,
                  "line": 1,
                  "offset": 81,
                },
              },
              "type": "component",
              "value": "A04",
            },
          ],
          "delimiter": "^",
          "index": 9,
          "position": {
            "end": {
              "column": 85,
              "line": 1,
              "offset": 84,
            },
            "start": {
              "column": 78,
              "line": 1,
              "offset": 77,
            },
          },
          "type": "field",
        },
        {
          "index": 10,
          "position": {
            "end": {
              "column": 91,
              "line": 1,
              "offset": 90,
            },
            "start": {
              "column": 86,
              "line": 1,
              "offset": 85,
            },
          },
          "type": "field",
          "value": "12345",
        },
        {
          "index": 11,
          "position": {
            "end": {
              "column": 93,
              "line": 1,
              "offset": 92,
            },
            "start": {
              "column": 92,
              "line": 1,
              "offset": 91,
            },
          },
          "type": "field",
          "value": "P",
        },
        {
          "index": 12,
          "position": {
            "end": {
              "column": 97,
              "line": 1,
              "offset": 96,
            },
            "start": {
              "column": 94,
              "line": 1,
              "offset": 93,
            },
          },
          "type": "field",
          "value": "2.3",
        },
      ],
      "delimiter": "|",
      "index": 0,
      "name": "MSH",
      "position": {
        "end": {
          "column": 97,
          "line": 1,
          "offset": 96,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "segment",
    },
  ],
  "delimiter": "
",
  "position": {
    "end": {
      "column": 97,
      "line": 1,
      "offset": 96,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`hl7v2Parser > Multi-segment messages > should parse a multi-segment message 1`] = `
{
  "children": [
    {
      "children": [
        {
          "index": 0,
          "position": {
            "end": {
              "column": 4,
              "line": 1,
              "offset": 3,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "header",
          "value": "MSH",
        },
        {
          "index": 1,
          "position": {
            "end": {
              "column": 5,
              "line": 1,
              "offset": 4,
            },
            "start": {
              "column": 4,
              "line": 1,
              "offset": 3,
            },
          },
          "type": "field",
          "value": "|",
        },
        {
          "index": 2,
          "position": {
            "end": {
              "column": 9,
              "line": 1,
              "offset": 8,
            },
            "start": {
              "column": 5,
              "line": 1,
              "offset": 4,
            },
          },
          "type": "field",
          "value": "^~\\&",
        },
        {
          "index": 3,
          "position": {
            "end": {
              "column": 29,
              "line": 1,
              "offset": 28,
            },
            "start": {
              "column": 10,
              "line": 1,
              "offset": 9,
            },
          },
          "type": "field",
          "value": "SENDING_APPLICATION",
        },
        {
          "index": 4,
          "position": {
            "end": {
              "column": 46,
              "line": 1,
              "offset": 45,
            },
            "start": {
              "column": 30,
              "line": 1,
              "offset": 29,
            },
          },
          "type": "field",
          "value": "SENDING_FACILITY",
        },
        {
          "index": 5,
          "position": {
            "end": {
              "column": 68,
              "line": 1,
              "offset": 67,
            },
            "start": {
              "column": 47,
              "line": 1,
              "offset": 46,
            },
          },
          "type": "field",
          "value": "RECEIVING_APPLICATION",
        },
        {
          "index": 6,
          "position": {
            "end": {
              "column": 87,
              "line": 1,
              "offset": 86,
            },
            "start": {
              "column": 69,
              "line": 1,
              "offset": 68,
            },
          },
          "type": "field",
          "value": "RECEIVING_FACILITY",
        },
        {
          "index": 7,
          "position": {
            "end": {
              "column": 102,
              "line": 1,
              "offset": 101,
            },
            "start": {
              "column": 88,
              "line": 1,
              "offset": 87,
            },
          },
          "type": "field",
          "value": "20110613061611",
        },
        {
          "index": 8,
          "position": {
            "end": {
              "column": 103,
              "line": 1,
              "offset": 102,
            },
            "start": {
              "column": 103,
              "line": 1,
              "offset": 102,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "children": [
            {
              "index": 0,
              "position": {
                "end": {
                  "column": 107,
                  "line": 1,
                  "offset": 106,
                },
                "start": {
                  "column": 104,
                  "line": 1,
                  "offset": 103,
                },
              },
              "type": "component",
              "value": "SIU",
            },
            {
              "index": 1,
              "position": {
                "end": {
                  "column": 111,
                  "line": 1,
                  "offset": 110,
                },
                "start": {
                  "column": 108,
                  "line": 1,
                  "offset": 107,
                },
              },
              "type": "component",
              "value": "S12",
            },
          ],
          "delimiter": "^",
          "index": 9,
          "position": {
            "end": {
              "column": 111,
              "line": 1,
              "offset": 110,
            },
            "start": {
              "column": 104,
              "line": 1,
              "offset": 103,
            },
          },
          "type": "field",
        },
        {
          "index": 10,
          "position": {
            "end": {
              "column": 120,
              "line": 1,
              "offset": 119,
            },
            "start": {
              "column": 112,
              "line": 1,
              "offset": 111,
            },
          },
          "type": "field",
          "value": "24916560",
        },
        {
          "index": 11,
          "position": {
            "end": {
              "column": 122,
              "line": 1,
              "offset": 121,
            },
            "start": {
              "column": 121,
              "line": 1,
              "offset": 120,
            },
          },
          "type": "field",
          "value": "P",
        },
        {
          "index": 12,
          "position": {
            "end": {
              "column": 126,
              "line": 1,
              "offset": 125,
            },
            "start": {
              "column": 123,
              "line": 1,
              "offset": 122,
            },
          },
          "type": "field",
          "value": "2.3",
        },
        {
          "index": 13,
          "position": {
            "end": {
              "column": 127,
              "line": 1,
              "offset": 126,
            },
            "start": {
              "column": 127,
              "line": 1,
              "offset": 126,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 14,
          "position": {
            "end": {
              "column": 128,
              "line": 1,
              "offset": 127,
            },
            "start": {
              "column": 128,
              "line": 1,
              "offset": 127,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 15,
          "position": {
            "end": {
              "column": 129,
              "line": 1,
              "offset": 128,
            },
            "start": {
              "column": 129,
              "line": 1,
              "offset": 128,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 16,
          "position": {
            "end": {
              "column": 130,
              "line": 1,
              "offset": 129,
            },
            "start": {
              "column": 130,
              "line": 1,
              "offset": 129,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 17,
          "position": {
            "end": {
              "column": 131,
              "line": 1,
              "offset": 130,
            },
            "start": {
              "column": 131,
              "line": 1,
              "offset": 130,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 18,
          "position": {
            "end": {
              "column": 132,
              "line": 1,
              "offset": 131,
            },
            "start": {
              "column": 132,
              "line": 1,
              "offset": 131,
            },
          },
          "type": "field",
          "value": "",
        },
      ],
      "delimiter": "|",
      "index": 0,
      "name": "MSH",
      "position": {
        "end": {
          "column": 132,
          "line": 1,
          "offset": 131,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "segment",
    },
    {
      "children": [
        {
          "index": 0,
          "position": {
            "end": {
              "column": 4,
              "line": 2,
              "offset": 135,
            },
            "start": {
              "column": 1,
              "line": 2,
              "offset": 132,
            },
          },
          "type": "header",
          "value": "PID",
        },
        {
          "index": 1,
          "position": {
            "end": {
              "column": 6,
              "line": 2,
              "offset": 137,
            },
            "start": {
              "column": 5,
              "line": 2,
              "offset": 136,
            },
          },
          "type": "field",
          "value": "1",
        },
        {
          "index": 2,
          "position": {
            "end": {
              "column": 7,
              "line": 2,
              "offset": 138,
            },
            "start": {
              "column": 7,
              "line": 2,
              "offset": 138,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 3,
          "position": {
            "end": {
              "column": 10,
              "line": 2,
              "offset": 141,
            },
            "start": {
              "column": 8,
              "line": 2,
              "offset": 139,
            },
          },
          "type": "field",
          "value": "42",
        },
        {
          "index": 4,
          "position": {
            "end": {
              "column": 11,
              "line": 2,
              "offset": 142,
            },
            "start": {
              "column": 11,
              "line": 2,
              "offset": 142,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "children": [
            {
              "index": 0,
              "position": {
                "end": {
                  "column": 22,
                  "line": 2,
                  "offset": 153,
                },
                "start": {
                  "column": 12,
                  "line": 2,
                  "offset": 143,
                },
              },
              "type": "component",
              "value": "BEEBLEBROX",
            },
            {
              "index": 1,
              "position": {
                "end": {
                  "column": 29,
                  "line": 2,
                  "offset": 160,
                },
                "start": {
                  "column": 23,
                  "line": 2,
                  "offset": 154,
                },
              },
              "type": "component",
              "value": "ZAPHOD",
            },
          ],
          "delimiter": "^",
          "index": 5,
          "position": {
            "end": {
              "column": 29,
              "line": 2,
              "offset": 160,
            },
            "start": {
              "column": 12,
              "line": 2,
              "offset": 143,
            },
          },
          "type": "field",
        },
        {
          "index": 6,
          "position": {
            "end": {
              "column": 30,
              "line": 2,
              "offset": 161,
            },
            "start": {
              "column": 30,
              "line": 2,
              "offset": 161,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 7,
          "position": {
            "end": {
              "column": 39,
              "line": 2,
              "offset": 170,
            },
            "start": {
              "column": 31,
              "line": 2,
              "offset": 162,
            },
          },
          "type": "field",
          "value": "19781012",
        },
        {
          "index": 8,
          "position": {
            "end": {
              "column": 41,
              "line": 2,
              "offset": 172,
            },
            "start": {
              "column": 40,
              "line": 2,
              "offset": 171,
            },
          },
          "type": "field",
          "value": "M",
        },
        {
          "index": 9,
          "position": {
            "end": {
              "column": 42,
              "line": 2,
              "offset": 173,
            },
            "start": {
              "column": 42,
              "line": 2,
              "offset": 173,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 10,
          "position": {
            "end": {
              "column": 43,
              "line": 2,
              "offset": 174,
            },
            "start": {
              "column": 43,
              "line": 2,
              "offset": 174,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "children": [
            {
              "index": 0,
              "position": {
                "end": {
                  "column": 63,
                  "line": 2,
                  "offset": 194,
                },
                "start": {
                  "column": 44,
                  "line": 2,
                  "offset": 175,
                },
              },
              "type": "component",
              "value": "1 Heart of Gold ave",
            },
            {
              "index": 1,
              "position": {
                "end": {
                  "column": 64,
                  "line": 2,
                  "offset": 195,
                },
                "start": {
                  "column": 64,
                  "line": 2,
                  "offset": 195,
                },
              },
              "type": "component",
              "value": "",
            },
            {
              "index": 2,
              "position": {
                "end": {
                  "column": 75,
                  "line": 2,
                  "offset": 206,
                },
                "start": {
                  "column": 65,
                  "line": 2,
                  "offset": 196,
                },
              },
              "type": "component",
              "value": "Fort Wayne",
            },
            {
              "index": 3,
              "position": {
                "end": {
                  "column": 78,
                  "line": 2,
                  "offset": 209,
                },
                "start": {
                  "column": 76,
                  "line": 2,
                  "offset": 207,
                },
              },
              "type": "component",
              "value": "IN",
            },
            {
              "index": 4,
              "position": {
                "end": {
                  "column": 84,
                  "line": 2,
                  "offset": 215,
                },
                "start": {
                  "column": 79,
                  "line": 2,
                  "offset": 210,
                },
              },
              "type": "component",
              "value": "46804",
            },
          ],
          "delimiter": "^",
          "index": 11,
          "position": {
            "end": {
              "column": 84,
              "line": 2,
              "offset": 215,
            },
            "start": {
              "column": 44,
              "line": 2,
              "offset": 175,
            },
          },
          "type": "field",
        },
        {
          "index": 12,
          "position": {
            "end": {
              "column": 85,
              "line": 2,
              "offset": 216,
            },
            "start": {
              "column": 85,
              "line": 2,
              "offset": 216,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 13,
          "position": {
            "end": {
              "column": 99,
              "line": 2,
              "offset": 230,
            },
            "start": {
              "column": 86,
              "line": 2,
              "offset": 217,
            },
          },
          "type": "field",
          "value": "(260)555-1234",
        },
        {
          "index": 14,
          "position": {
            "end": {
              "column": 100,
              "line": 2,
              "offset": 231,
            },
            "start": {
              "column": 100,
              "line": 2,
              "offset": 231,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 15,
          "position": {
            "end": {
              "column": 101,
              "line": 2,
              "offset": 232,
            },
            "start": {
              "column": 101,
              "line": 2,
              "offset": 232,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 16,
          "position": {
            "end": {
              "column": 103,
              "line": 2,
              "offset": 234,
            },
            "start": {
              "column": 102,
              "line": 2,
              "offset": 233,
            },
          },
          "type": "field",
          "value": "S",
        },
        {
          "index": 17,
          "position": {
            "end": {
              "column": 104,
              "line": 2,
              "offset": 235,
            },
            "start": {
              "column": 104,
              "line": 2,
              "offset": 235,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 18,
          "position": {
            "end": {
              "column": 114,
              "line": 2,
              "offset": 245,
            },
            "start": {
              "column": 105,
              "line": 2,
              "offset": 236,
            },
          },
          "type": "field",
          "value": "999999999",
        },
        {
          "index": 19,
          "position": {
            "end": {
              "column": 115,
              "line": 2,
              "offset": 246,
            },
            "start": {
              "column": 115,
              "line": 2,
              "offset": 246,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 20,
          "position": {
            "end": {
              "column": 116,
              "line": 2,
              "offset": 247,
            },
            "start": {
              "column": 116,
              "line": 2,
              "offset": 247,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 21,
          "position": {
            "end": {
              "column": 117,
              "line": 2,
              "offset": 248,
            },
            "start": {
              "column": 117,
              "line": 2,
              "offset": 248,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 22,
          "position": {
            "end": {
              "column": 118,
              "line": 2,
              "offset": 249,
            },
            "start": {
              "column": 118,
              "line": 2,
              "offset": 249,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 23,
          "position": {
            "end": {
              "column": 119,
              "line": 2,
              "offset": 250,
            },
            "start": {
              "column": 119,
              "line": 2,
              "offset": 250,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 24,
          "position": {
            "end": {
              "column": 120,
              "line": 2,
              "offset": 251,
            },
            "start": {
              "column": 120,
              "line": 2,
              "offset": 251,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 25,
          "position": {
            "end": {
              "column": 121,
              "line": 2,
              "offset": 252,
            },
            "start": {
              "column": 121,
              "line": 2,
              "offset": 252,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 26,
          "position": {
            "end": {
              "column": 122,
              "line": 2,
              "offset": 253,
            },
            "start": {
              "column": 122,
              "line": 2,
              "offset": 253,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 27,
          "position": {
            "end": {
              "column": 123,
              "line": 2,
              "offset": 254,
            },
            "start": {
              "column": 123,
              "line": 2,
              "offset": 254,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 28,
          "position": {
            "end": {
              "column": 124,
              "line": 2,
              "offset": 255,
            },
            "start": {
              "column": 124,
              "line": 2,
              "offset": 255,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 29,
          "position": {
            "end": {
              "column": 125,
              "line": 2,
              "offset": 256,
            },
            "start": {
              "column": 125,
              "line": 2,
              "offset": 256,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 30,
          "position": {
            "end": {
              "column": 126,
              "line": 2,
              "offset": 257,
            },
            "start": {
              "column": 126,
              "line": 2,
              "offset": 257,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 31,
          "position": {
            "end": {
              "column": 127,
              "line": 2,
              "offset": 258,
            },
            "start": {
              "column": 127,
              "line": 2,
              "offset": 258,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 32,
          "position": {
            "end": {
              "column": 128,
              "line": 2,
              "offset": 259,
            },
            "start": {
              "column": 128,
              "line": 2,
              "offset": 259,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 33,
          "position": {
            "end": {
              "column": 129,
              "line": 2,
              "offset": 260,
            },
            "start": {
              "column": 129,
              "line": 2,
              "offset": 260,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 34,
          "position": {
            "end": {
              "column": 130,
              "line": 2,
              "offset": 261,
            },
            "start": {
              "column": 130,
              "line": 2,
              "offset": 261,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 35,
          "position": {
            "end": {
              "column": 131,
              "line": 2,
              "offset": 262,
            },
            "start": {
              "column": 131,
              "line": 2,
              "offset": 262,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 36,
          "position": {
            "end": {
              "column": 132,
              "line": 2,
              "offset": 263,
            },
            "start": {
              "column": 132,
              "line": 2,
              "offset": 263,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 37,
          "position": {
            "end": {
              "column": 133,
              "line": 2,
              "offset": 264,
            },
            "start": {
              "column": 133,
              "line": 2,
              "offset": 264,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 38,
          "position": {
            "end": {
              "column": 134,
              "line": 2,
              "offset": 265,
            },
            "start": {
              "column": 134,
              "line": 2,
              "offset": 265,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 39,
          "position": {
            "end": {
              "column": 135,
              "line": 2,
              "offset": 266,
            },
            "start": {
              "column": 135,
              "line": 2,
              "offset": 266,
            },
          },
          "type": "field",
          "value": "",
        },
      ],
      "delimiter": "|",
      "index": 1,
      "name": "PID",
      "position": {
        "end": {
          "column": 135,
          "line": 2,
          "offset": 266,
        },
        "start": {
          "column": 1,
          "line": 2,
          "offset": 132,
        },
      },
      "type": "segment",
    },
    {
      "children": [
        {
          "index": 0,
          "position": {
            "end": {
              "column": 4,
              "line": 3,
              "offset": 270,
            },
            "start": {
              "column": 1,
              "line": 3,
              "offset": 267,
            },
          },
          "type": "header",
          "value": "PV1",
        },
        {
          "index": 1,
          "position": {
            "end": {
              "column": 6,
              "line": 3,
              "offset": 272,
            },
            "start": {
              "column": 5,
              "line": 3,
              "offset": 271,
            },
          },
          "type": "field",
          "value": "1",
        },
        {
          "index": 2,
          "position": {
            "end": {
              "column": 8,
              "line": 3,
              "offset": 274,
            },
            "start": {
              "column": 7,
              "line": 3,
              "offset": 273,
            },
          },
          "type": "field",
          "value": "O",
        },
        {
          "index": 3,
          "position": {
            "end": {
              "column": 9,
              "line": 3,
              "offset": 275,
            },
            "start": {
              "column": 9,
              "line": 3,
              "offset": 275,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 4,
          "position": {
            "end": {
              "column": 10,
              "line": 3,
              "offset": 276,
            },
            "start": {
              "column": 10,
              "line": 3,
              "offset": 276,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 5,
          "position": {
            "end": {
              "column": 11,
              "line": 3,
              "offset": 277,
            },
            "start": {
              "column": 11,
              "line": 3,
              "offset": 277,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 6,
          "position": {
            "end": {
              "column": 12,
              "line": 3,
              "offset": 278,
            },
            "start": {
              "column": 12,
              "line": 3,
              "offset": 278,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "children": [
            {
              "index": 0,
              "position": {
                "end": {
                  "column": 14,
                  "line": 3,
                  "offset": 280,
                },
                "start": {
                  "column": 13,
                  "line": 3,
                  "offset": 279,
                },
              },
              "type": "component",
              "value": "1",
            },
            {
              "index": 1,
              "position": {
                "end": {
                  "column": 20,
                  "line": 3,
                  "offset": 286,
                },
                "start": {
                  "column": 15,
                  "line": 3,
                  "offset": 281,
                },
              },
              "type": "component",
              "value": "Adams",
            },
            {
              "index": 2,
              "position": {
                "end": {
                  "column": 28,
                  "line": 3,
                  "offset": 294,
                },
                "start": {
                  "column": 21,
                  "line": 3,
                  "offset": 287,
                },
              },
              "type": "component",
              "value": "Douglas",
            },
            {
              "index": 3,
              "position": {
                "end": {
                  "column": 30,
                  "line": 3,
                  "offset": 296,
                },
                "start": {
                  "column": 29,
                  "line": 3,
                  "offset": 295,
                },
              },
              "type": "component",
              "value": "A",
            },
            {
              "index": 4,
              "position": {
                "end": {
                  "column": 33,
                  "line": 3,
                  "offset": 299,
                },
                "start": {
                  "column": 31,
                  "line": 3,
                  "offset": 297,
                },
              },
              "type": "component",
              "value": "MD",
            },
            {
              "index": 5,
              "position": {
                "end": {
                  "column": 34,
                  "line": 3,
                  "offset": 300,
                },
                "start": {
                  "column": 34,
                  "line": 3,
                  "offset": 300,
                },
              },
              "type": "component",
              "value": "",
            },
            {
              "index": 6,
              "position": {
                "end": {
                  "column": 35,
                  "line": 3,
                  "offset": 301,
                },
                "start": {
                  "column": 35,
                  "line": 3,
                  "offset": 301,
                },
              },
              "type": "component",
              "value": "",
            },
            {
              "index": 7,
              "position": {
                "end": {
                  "column": 36,
                  "line": 3,
                  "offset": 302,
                },
                "start": {
                  "column": 36,
                  "line": 3,
                  "offset": 302,
                },
              },
              "type": "component",
              "value": "",
            },
            {
              "index": 8,
              "position": {
                "end": {
                  "column": 37,
                  "line": 3,
                  "offset": 303,
                },
                "start": {
                  "column": 37,
                  "line": 3,
                  "offset": 303,
                },
              },
              "type": "component",
              "value": "",
            },
          ],
          "delimiter": "^",
          "index": 7,
          "position": {
            "end": {
              "column": 37,
              "line": 3,
              "offset": 303,
            },
            "start": {
              "column": 13,
              "line": 3,
              "offset": 279,
            },
          },
          "type": "field",
        },
        {
          "children": [
            {
              "index": 0,
              "position": {
                "end": {
                  "column": 39,
                  "line": 3,
                  "offset": 305,
                },
                "start": {
                  "column": 38,
                  "line": 3,
                  "offset": 304,
                },
              },
              "type": "component",
              "value": "2",
            },
            {
              "index": 1,
              "position": {
                "end": {
                  "column": 46,
                  "line": 3,
                  "offset": 312,
                },
                "start": {
                  "column": 40,
                  "line": 3,
                  "offset": 306,
                },
              },
              "type": "component",
              "value": "Colfer",
            },
            {
              "index": 2,
              "position": {
                "end": {
                  "column": 51,
                  "line": 3,
                  "offset": 317,
                },
                "start": {
                  "column": 47,
                  "line": 3,
                  "offset": 313,
                },
              },
              "type": "component",
              "value": "Eoin",
            },
            {
              "index": 3,
              "position": {
                "end": {
                  "column": 53,
                  "line": 3,
                  "offset": 319,
                },
                "start": {
                  "column": 52,
                  "line": 3,
                  "offset": 318,
                },
              },
              "type": "component",
              "value": "D",
            },
            {
              "index": 4,
              "position": {
                "end": {
                  "column": 56,
                  "line": 3,
                  "offset": 322,
                },
                "start": {
                  "column": 54,
                  "line": 3,
                  "offset": 320,
                },
              },
              "type": "component",
              "value": "MD",
            },
            {
              "index": 5,
              "position": {
                "end": {
                  "column": 57,
                  "line": 3,
                  "offset": 323,
                },
                "start": {
                  "column": 57,
                  "line": 3,
                  "offset": 323,
                },
              },
              "type": "component",
              "value": "",
            },
            {
              "index": 6,
              "position": {
                "end": {
                  "column": 58,
                  "line": 3,
                  "offset": 324,
                },
                "start": {
                  "column": 58,
                  "line": 3,
                  "offset": 324,
                },
              },
              "type": "component",
              "value": "",
            },
            {
              "index": 7,
              "position": {
                "end": {
                  "column": 59,
                  "line": 3,
                  "offset": 325,
                },
                "start": {
                  "column": 59,
                  "line": 3,
                  "offset": 325,
                },
              },
              "type": "component",
              "value": "",
            },
            {
              "index": 8,
              "position": {
                "end": {
                  "column": 60,
                  "line": 3,
                  "offset": 326,
                },
                "start": {
                  "column": 60,
                  "line": 3,
                  "offset": 326,
                },
              },
              "type": "component",
              "value": "",
            },
          ],
          "delimiter": "^",
          "index": 8,
          "position": {
            "end": {
              "column": 60,
              "line": 3,
              "offset": 326,
            },
            "start": {
              "column": 38,
              "line": 3,
              "offset": 304,
            },
          },
          "type": "field",
        },
        {
          "index": 9,
          "position": {
            "end": {
              "column": 61,
              "line": 3,
              "offset": 327,
            },
            "start": {
              "column": 61,
              "line": 3,
              "offset": 327,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 10,
          "position": {
            "end": {
              "column": 62,
              "line": 3,
              "offset": 328,
            },
            "start": {
              "column": 62,
              "line": 3,
              "offset": 328,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 11,
          "position": {
            "end": {
              "column": 63,
              "line": 3,
              "offset": 329,
            },
            "start": {
              "column": 63,
              "line": 3,
              "offset": 329,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 12,
          "position": {
            "end": {
              "column": 64,
              "line": 3,
              "offset": 330,
            },
            "start": {
              "column": 64,
              "line": 3,
              "offset": 330,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 13,
          "position": {
            "end": {
              "column": 65,
              "line": 3,
              "offset": 331,
            },
            "start": {
              "column": 65,
              "line": 3,
              "offset": 331,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 14,
          "position": {
            "end": {
              "column": 66,
              "line": 3,
              "offset": 332,
            },
            "start": {
              "column": 66,
              "line": 3,
              "offset": 332,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 15,
          "position": {
            "end": {
              "column": 67,
              "line": 3,
              "offset": 333,
            },
            "start": {
              "column": 67,
              "line": 3,
              "offset": 333,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 16,
          "position": {
            "end": {
              "column": 68,
              "line": 3,
              "offset": 334,
            },
            "start": {
              "column": 68,
              "line": 3,
              "offset": 334,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 17,
          "position": {
            "end": {
              "column": 69,
              "line": 3,
              "offset": 335,
            },
            "start": {
              "column": 69,
              "line": 3,
              "offset": 335,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 18,
          "position": {
            "end": {
              "column": 70,
              "line": 3,
              "offset": 336,
            },
            "start": {
              "column": 70,
              "line": 3,
              "offset": 336,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 19,
          "position": {
            "end": {
              "column": 71,
              "line": 3,
              "offset": 337,
            },
            "start": {
              "column": 71,
              "line": 3,
              "offset": 337,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 20,
          "position": {
            "end": {
              "column": 72,
              "line": 3,
              "offset": 338,
            },
            "start": {
              "column": 72,
              "line": 3,
              "offset": 338,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 21,
          "position": {
            "end": {
              "column": 73,
              "line": 3,
              "offset": 339,
            },
            "start": {
              "column": 73,
              "line": 3,
              "offset": 339,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 22,
          "position": {
            "end": {
              "column": 74,
              "line": 3,
              "offset": 340,
            },
            "start": {
              "column": 74,
              "line": 3,
              "offset": 340,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 23,
          "position": {
            "end": {
              "column": 75,
              "line": 3,
              "offset": 341,
            },
            "start": {
              "column": 75,
              "line": 3,
              "offset": 341,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 24,
          "position": {
            "end": {
              "column": 76,
              "line": 3,
              "offset": 342,
            },
            "start": {
              "column": 76,
              "line": 3,
              "offset": 342,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 25,
          "position": {
            "end": {
              "column": 77,
              "line": 3,
              "offset": 343,
            },
            "start": {
              "column": 77,
              "line": 3,
              "offset": 343,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 26,
          "position": {
            "end": {
              "column": 78,
              "line": 3,
              "offset": 344,
            },
            "start": {
              "column": 78,
              "line": 3,
              "offset": 344,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 27,
          "position": {
            "end": {
              "column": 79,
              "line": 3,
              "offset": 345,
            },
            "start": {
              "column": 79,
              "line": 3,
              "offset": 345,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 28,
          "position": {
            "end": {
              "column": 80,
              "line": 3,
              "offset": 346,
            },
            "start": {
              "column": 80,
              "line": 3,
              "offset": 346,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 29,
          "position": {
            "end": {
              "column": 81,
              "line": 3,
              "offset": 347,
            },
            "start": {
              "column": 81,
              "line": 3,
              "offset": 347,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 30,
          "position": {
            "end": {
              "column": 82,
              "line": 3,
              "offset": 348,
            },
            "start": {
              "column": 82,
              "line": 3,
              "offset": 348,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 31,
          "position": {
            "end": {
              "column": 83,
              "line": 3,
              "offset": 349,
            },
            "start": {
              "column": 83,
              "line": 3,
              "offset": 349,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 32,
          "position": {
            "end": {
              "column": 84,
              "line": 3,
              "offset": 350,
            },
            "start": {
              "column": 84,
              "line": 3,
              "offset": 350,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 33,
          "position": {
            "end": {
              "column": 85,
              "line": 3,
              "offset": 351,
            },
            "start": {
              "column": 85,
              "line": 3,
              "offset": 351,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 34,
          "position": {
            "end": {
              "column": 86,
              "line": 3,
              "offset": 352,
            },
            "start": {
              "column": 86,
              "line": 3,
              "offset": 352,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 35,
          "position": {
            "end": {
              "column": 87,
              "line": 3,
              "offset": 353,
            },
            "start": {
              "column": 87,
              "line": 3,
              "offset": 353,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 36,
          "position": {
            "end": {
              "column": 88,
              "line": 3,
              "offset": 354,
            },
            "start": {
              "column": 88,
              "line": 3,
              "offset": 354,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 37,
          "position": {
            "end": {
              "column": 89,
              "line": 3,
              "offset": 355,
            },
            "start": {
              "column": 89,
              "line": 3,
              "offset": 355,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 38,
          "position": {
            "end": {
              "column": 90,
              "line": 3,
              "offset": 356,
            },
            "start": {
              "column": 90,
              "line": 3,
              "offset": 356,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 39,
          "position": {
            "end": {
              "column": 91,
              "line": 3,
              "offset": 357,
            },
            "start": {
              "column": 91,
              "line": 3,
              "offset": 357,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 40,
          "position": {
            "end": {
              "column": 92,
              "line": 3,
              "offset": 358,
            },
            "start": {
              "column": 92,
              "line": 3,
              "offset": 358,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 41,
          "position": {
            "end": {
              "column": 93,
              "line": 3,
              "offset": 359,
            },
            "start": {
              "column": 93,
              "line": 3,
              "offset": 359,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 42,
          "position": {
            "end": {
              "column": 94,
              "line": 3,
              "offset": 360,
            },
            "start": {
              "column": 94,
              "line": 3,
              "offset": 360,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 43,
          "position": {
            "end": {
              "column": 95,
              "line": 3,
              "offset": 361,
            },
            "start": {
              "column": 95,
              "line": 3,
              "offset": 361,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 44,
          "position": {
            "end": {
              "column": 96,
              "line": 3,
              "offset": 362,
            },
            "start": {
              "column": 96,
              "line": 3,
              "offset": 362,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 45,
          "position": {
            "end": {
              "column": 97,
              "line": 3,
              "offset": 363,
            },
            "start": {
              "column": 97,
              "line": 3,
              "offset": 363,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 46,
          "position": {
            "end": {
              "column": 98,
              "line": 3,
              "offset": 364,
            },
            "start": {
              "column": 98,
              "line": 3,
              "offset": 364,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 47,
          "position": {
            "end": {
              "column": 99,
              "line": 3,
              "offset": 365,
            },
            "start": {
              "column": 99,
              "line": 3,
              "offset": 365,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 48,
          "position": {
            "end": {
              "column": 100,
              "line": 3,
              "offset": 366,
            },
            "start": {
              "column": 100,
              "line": 3,
              "offset": 366,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 49,
          "position": {
            "end": {
              "column": 101,
              "line": 3,
              "offset": 367,
            },
            "start": {
              "column": 101,
              "line": 3,
              "offset": 367,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 50,
          "position": {
            "end": {
              "column": 107,
              "line": 3,
              "offset": 373,
            },
            "start": {
              "column": 102,
              "line": 3,
              "offset": 368,
            },
          },
          "type": "field",
          "value": "99158",
        },
        {
          "index": 51,
          "position": {
            "end": {
              "column": 108,
              "line": 3,
              "offset": 374,
            },
            "start": {
              "column": 108,
              "line": 3,
              "offset": 374,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 52,
          "position": {
            "end": {
              "column": 109,
              "line": 3,
              "offset": 375,
            },
            "start": {
              "column": 109,
              "line": 3,
              "offset": 375,
            },
          },
          "type": "field",
          "value": "",
        },
      ],
      "delimiter": "|",
      "index": 2,
      "name": "PV1",
      "position": {
        "end": {
          "column": 109,
          "line": 3,
          "offset": 375,
        },
        "start": {
          "column": 1,
          "line": 3,
          "offset": 267,
        },
      },
      "type": "segment",
    },
  ],
  "delimiter": "
",
  "position": {
    "end": {
      "column": 109,
      "line": 3,
      "offset": 375,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`hl7v2Parser > Single segment messages > should auto-detect delimiters by default (custom delimiters) 1`] = `
{
  "children": [
    {
      "children": [
        {
          "index": 0,
          "position": {
            "end": {
              "column": 4,
              "line": 1,
              "offset": 3,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "header",
          "value": "MSH",
        },
        {
          "index": 1,
          "position": {
            "end": {
              "column": 5,
              "line": 1,
              "offset": 4,
            },
            "start": {
              "column": 4,
              "line": 1,
              "offset": 3,
            },
          },
          "type": "field",
          "value": "*",
        },
        {
          "index": 2,
          "position": {
            "end": {
              "column": 9,
              "line": 1,
              "offset": 8,
            },
            "start": {
              "column": 5,
              "line": 1,
              "offset": 4,
            },
          },
          "type": "field",
          "value": "?%\\>",
        },
        {
          "index": 3,
          "position": {
            "end": {
              "column": 14,
              "line": 1,
              "offset": 13,
            },
            "start": {
              "column": 10,
              "line": 1,
              "offset": 9,
            },
          },
          "type": "field",
          "value": "TEST",
        },
        {
          "index": 4,
          "position": {
            "end": {
              "column": 15,
              "line": 1,
              "offset": 14,
            },
            "start": {
              "column": 15,
              "line": 1,
              "offset": 14,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 5,
          "position": {
            "end": {
              "column": 16,
              "line": 1,
              "offset": 15,
            },
            "start": {
              "column": 16,
              "line": 1,
              "offset": 15,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 6,
          "position": {
            "end": {
              "column": 31,
              "line": 1,
              "offset": 30,
            },
            "start": {
              "column": 17,
              "line": 1,
              "offset": 16,
            },
          },
          "type": "field",
          "value": "20110613061611",
        },
        {
          "index": 7,
          "position": {
            "end": {
              "column": 32,
              "line": 1,
              "offset": 31,
            },
            "start": {
              "column": 32,
              "line": 1,
              "offset": 31,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "children": [
            {
              "index": 0,
              "position": {
                "end": {
                  "column": 36,
                  "line": 1,
                  "offset": 35,
                },
                "start": {
                  "column": 33,
                  "line": 1,
                  "offset": 32,
                },
              },
              "type": "component",
              "value": "ADT",
            },
            {
              "index": 1,
              "position": {
                "end": {
                  "column": 40,
                  "line": 1,
                  "offset": 39,
                },
                "start": {
                  "column": 37,
                  "line": 1,
                  "offset": 36,
                },
              },
              "type": "component",
              "value": "A04",
            },
          ],
          "delimiter": "?",
          "index": 8,
          "position": {
            "end": {
              "column": 40,
              "line": 1,
              "offset": 39,
            },
            "start": {
              "column": 33,
              "line": 1,
              "offset": 32,
            },
          },
          "type": "field",
        },
        {
          "index": 9,
          "position": {
            "end": {
              "column": 44,
              "line": 1,
              "offset": 43,
            },
            "start": {
              "column": 41,
              "line": 1,
              "offset": 40,
            },
          },
          "type": "field",
          "value": "123",
        },
        {
          "index": 10,
          "position": {
            "end": {
              "column": 46,
              "line": 1,
              "offset": 45,
            },
            "start": {
              "column": 45,
              "line": 1,
              "offset": 44,
            },
          },
          "type": "field",
          "value": "P",
        },
        {
          "index": 11,
          "position": {
            "end": {
              "column": 50,
              "line": 1,
              "offset": 49,
            },
            "start": {
              "column": 47,
              "line": 1,
              "offset": 46,
            },
          },
          "type": "field",
          "value": "2.3",
        },
      ],
      "delimiter": "*",
      "index": 0,
      "name": "MSH",
      "position": {
        "end": {
          "column": 50,
          "line": 1,
          "offset": 49,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "segment",
    },
  ],
  "delimiter": "
",
  "position": {
    "end": {
      "column": 50,
      "line": 1,
      "offset": 49,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`hl7v2Parser > Single segment messages > should handle custom delimiter options 1`] = `
{
  "children": [
    {
      "children": [
        {
          "index": 0,
          "position": {
            "end": {
              "column": 4,
              "line": 1,
              "offset": 3,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "header",
          "value": "MSH",
        },
        {
          "index": 1,
          "position": {
            "end": {
              "column": 4,
              "line": 1,
              "offset": 4,
            },
            "start": {
              "column": 4,
              "line": 1,
              "offset": 3,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 2,
          "position": {
            "end": {
              "column": 5,
              "line": 1,
              "offset": 8,
            },
            "start": {
              "column": 5,
              "line": 1,
              "offset": 4,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 3,
          "position": {
            "end": {
              "column": 10,
              "line": 1,
              "offset": 9,
            },
            "start": {
              "column": 10,
              "line": 1,
              "offset": 9,
            },
          },
          "type": "field",
          "value": "",
        },
      ],
      "delimiter": "|",
      "index": 0,
      "name": "MSH",
      "position": {
        "end": {
          "column": 4,
          "line": 1,
          "offset": 3,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "segment",
    },
    {
      "children": [
        {
          "index": 0,
          "position": {
            "end": {
              "column": 5,
              "line": 2,
              "offset": 8,
            },
            "start": {
              "column": 1,
              "line": 2,
              "offset": 4,
            },
          },
          "type": "header",
          "value": "^~\\&",
        },
      ],
      "delimiter": "|",
      "index": 1,
      "name": "^~\\&",
      "position": {
        "end": {
          "column": 5,
          "line": 2,
          "offset": 8,
        },
        "start": {
          "column": 1,
          "line": 2,
          "offset": 4,
        },
      },
      "type": "segment",
    },
    {
      "children": [
        {
          "index": 0,
          "position": {
            "end": {
              "column": 5,
              "line": 3,
              "offset": 13,
            },
            "start": {
              "column": 1,
              "line": 3,
              "offset": 9,
            },
          },
          "type": "header",
          "value": "TEST",
        },
      ],
      "delimiter": "|",
      "index": 2,
      "name": "TEST",
      "position": {
        "end": {
          "column": 5,
          "line": 3,
          "offset": 13,
        },
        "start": {
          "column": 1,
          "line": 3,
          "offset": 9,
        },
      },
      "type": "segment",
    },
    {
      "children": [
        {
          "index": 0,
          "position": {
            "end": {
              "column": 15,
              "line": 6,
              "offset": 30,
            },
            "start": {
              "column": 1,
              "line": 6,
              "offset": 16,
            },
          },
          "type": "header",
          "value": "20110613061611",
        },
      ],
      "delimiter": "|",
      "index": 5,
      "name": "20110613061611",
      "position": {
        "end": {
          "column": 15,
          "line": 6,
          "offset": 30,
        },
        "start": {
          "column": 1,
          "line": 6,
          "offset": 16,
        },
      },
      "type": "segment",
    },
    {
      "children": [
        {
          "index": 0,
          "position": {
            "end": {
              "column": 8,
              "line": 8,
              "offset": 39,
            },
            "start": {
              "column": 1,
              "line": 8,
              "offset": 32,
            },
          },
          "type": "header",
          "value": "ADT^A04",
        },
      ],
      "delimiter": "|",
      "index": 7,
      "name": "ADT^A04",
      "position": {
        "end": {
          "column": 8,
          "line": 8,
          "offset": 39,
        },
        "start": {
          "column": 1,
          "line": 8,
          "offset": 32,
        },
      },
      "type": "segment",
    },
    {
      "children": [
        {
          "index": 0,
          "position": {
            "end": {
              "column": 4,
              "line": 9,
              "offset": 43,
            },
            "start": {
              "column": 1,
              "line": 9,
              "offset": 40,
            },
          },
          "type": "header",
          "value": "123",
        },
      ],
      "delimiter": "|",
      "index": 8,
      "name": "123",
      "position": {
        "end": {
          "column": 4,
          "line": 9,
          "offset": 43,
        },
        "start": {
          "column": 1,
          "line": 9,
          "offset": 40,
        },
      },
      "type": "segment",
    },
    {
      "children": [
        {
          "index": 0,
          "position": {
            "end": {
              "column": 2,
              "line": 10,
              "offset": 45,
            },
            "start": {
              "column": 1,
              "line": 10,
              "offset": 44,
            },
          },
          "type": "header",
          "value": "P",
        },
      ],
      "delimiter": "|",
      "index": 9,
      "name": "P",
      "position": {
        "end": {
          "column": 2,
          "line": 10,
          "offset": 45,
        },
        "start": {
          "column": 1,
          "line": 10,
          "offset": 44,
        },
      },
      "type": "segment",
    },
    {
      "children": [
        {
          "index": 0,
          "position": {
            "end": {
              "column": 4,
              "line": 11,
              "offset": 49,
            },
            "start": {
              "column": 1,
              "line": 11,
              "offset": 46,
            },
          },
          "type": "header",
          "value": "2.3",
        },
      ],
      "delimiter": "|",
      "index": 10,
      "name": "2.3",
      "position": {
        "end": {
          "column": 4,
          "line": 11,
          "offset": 49,
        },
        "start": {
          "column": 1,
          "line": 11,
          "offset": 46,
        },
      },
      "type": "segment",
    },
  ],
  "delimiter": "*",
  "position": {
    "end": {
      "column": 4,
      "line": 11,
      "offset": 49,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`hl7v2Parser > Single segment messages > should parse a basic MSH segment 1`] = `
{
  "children": [
    {
      "children": [
        {
          "index": 0,
          "position": {
            "end": {
              "column": 4,
              "line": 1,
              "offset": 3,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "header",
          "value": "MSH",
        },
        {
          "index": 1,
          "position": {
            "end": {
              "column": 5,
              "line": 1,
              "offset": 4,
            },
            "start": {
              "column": 4,
              "line": 1,
              "offset": 3,
            },
          },
          "type": "field",
          "value": "|",
        },
        {
          "index": 2,
          "position": {
            "end": {
              "column": 9,
              "line": 1,
              "offset": 8,
            },
            "start": {
              "column": 5,
              "line": 1,
              "offset": 4,
            },
          },
          "type": "field",
          "value": "^~\\&",
        },
        {
          "index": 3,
          "position": {
            "end": {
              "column": 21,
              "line": 1,
              "offset": 20,
            },
            "start": {
              "column": 10,
              "line": 1,
              "offset": 9,
            },
          },
          "type": "field",
          "value": "SENDING_APP",
        },
        {
          "index": 4,
          "position": {
            "end": {
              "column": 33,
              "line": 1,
              "offset": 32,
            },
            "start": {
              "column": 22,
              "line": 1,
              "offset": 21,
            },
          },
          "type": "field",
          "value": "SENDING_FAC",
        },
        {
          "index": 5,
          "position": {
            "end": {
              "column": 47,
              "line": 1,
              "offset": 46,
            },
            "start": {
              "column": 34,
              "line": 1,
              "offset": 33,
            },
          },
          "type": "field",
          "value": "RECEIVING_APP",
        },
        {
          "index": 6,
          "position": {
            "end": {
              "column": 61,
              "line": 1,
              "offset": 60,
            },
            "start": {
              "column": 48,
              "line": 1,
              "offset": 47,
            },
          },
          "type": "field",
          "value": "RECEIVING_FAC",
        },
        {
          "index": 7,
          "position": {
            "end": {
              "column": 76,
              "line": 1,
              "offset": 75,
            },
            "start": {
              "column": 62,
              "line": 1,
              "offset": 61,
            },
          },
          "type": "field",
          "value": "20110613061611",
        },
        {
          "index": 8,
          "position": {
            "end": {
              "column": 77,
              "line": 1,
              "offset": 76,
            },
            "start": {
              "column": 77,
              "line": 1,
              "offset": 76,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "children": [
            {
              "index": 0,
              "position": {
                "end": {
                  "column": 81,
                  "line": 1,
                  "offset": 80,
                },
                "start": {
                  "column": 78,
                  "line": 1,
                  "offset": 77,
                },
              },
              "type": "component",
              "value": "ADT",
            },
            {
              "index": 1,
              "position": {
                "end": {
                  "column": 85,
                  "line": 1,
                  "offset": 84,
                },
                "start": {
                  "column": 82,
                  "line": 1,
                  "offset": 81,
                },
              },
              "type": "component",
              "value": "A04",
            },
          ],
          "delimiter": "^",
          "index": 9,
          "position": {
            "end": {
              "column": 85,
              "line": 1,
              "offset": 84,
            },
            "start": {
              "column": 78,
              "line": 1,
              "offset": 77,
            },
          },
          "type": "field",
        },
        {
          "index": 10,
          "position": {
            "end": {
              "column": 91,
              "line": 1,
              "offset": 90,
            },
            "start": {
              "column": 86,
              "line": 1,
              "offset": 85,
            },
          },
          "type": "field",
          "value": "12345",
        },
        {
          "index": 11,
          "position": {
            "end": {
              "column": 93,
              "line": 1,
              "offset": 92,
            },
            "start": {
              "column": 92,
              "line": 1,
              "offset": 91,
            },
          },
          "type": "field",
          "value": "P",
        },
        {
          "index": 12,
          "position": {
            "end": {
              "column": 97,
              "line": 1,
              "offset": 96,
            },
            "start": {
              "column": 94,
              "line": 1,
              "offset": 93,
            },
          },
          "type": "field",
          "value": "2.3",
        },
      ],
      "delimiter": "|",
      "index": 0,
      "name": "MSH",
      "position": {
        "end": {
          "column": 97,
          "line": 1,
          "offset": 96,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "segment",
    },
  ],
  "delimiter": "
",
  "position": {
    "end": {
      "column": 97,
      "line": 1,
      "offset": 96,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`hl7v2Parser > Single segment messages > should parse fields within segments 1`] = `
{
  "children": [
    {
      "children": [
        {
          "index": 0,
          "position": {
            "end": {
              "column": 4,
              "line": 1,
              "offset": 3,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "header",
          "value": "PID",
        },
        {
          "index": 1,
          "position": {
            "end": {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
            "start": {
              "column": 5,
              "line": 1,
              "offset": 4,
            },
          },
          "type": "field",
          "value": "1",
        },
        {
          "index": 2,
          "position": {
            "end": {
              "column": 7,
              "line": 1,
              "offset": 6,
            },
            "start": {
              "column": 7,
              "line": 1,
              "offset": 6,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 3,
          "position": {
            "end": {
              "column": 10,
              "line": 1,
              "offset": 9,
            },
            "start": {
              "column": 8,
              "line": 1,
              "offset": 7,
            },
          },
          "type": "field",
          "value": "42",
        },
        {
          "index": 4,
          "position": {
            "end": {
              "column": 11,
              "line": 1,
              "offset": 10,
            },
            "start": {
              "column": 11,
              "line": 1,
              "offset": 10,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "children": [
            {
              "index": 0,
              "position": {
                "end": {
                  "column": 22,
                  "line": 1,
                  "offset": 21,
                },
                "start": {
                  "column": 12,
                  "line": 1,
                  "offset": 11,
                },
              },
              "type": "component",
              "value": "BEEBLEBROX",
            },
            {
              "index": 1,
              "position": {
                "end": {
                  "column": 29,
                  "line": 1,
                  "offset": 28,
                },
                "start": {
                  "column": 23,
                  "line": 1,
                  "offset": 22,
                },
              },
              "type": "component",
              "value": "ZAPHOD",
            },
          ],
          "delimiter": "^",
          "index": 5,
          "position": {
            "end": {
              "column": 29,
              "line": 1,
              "offset": 28,
            },
            "start": {
              "column": 12,
              "line": 1,
              "offset": 11,
            },
          },
          "type": "field",
        },
        {
          "index": 6,
          "position": {
            "end": {
              "column": 30,
              "line": 1,
              "offset": 29,
            },
            "start": {
              "column": 30,
              "line": 1,
              "offset": 29,
            },
          },
          "type": "field",
          "value": "",
        },
        {
          "index": 7,
          "position": {
            "end": {
              "column": 39,
              "line": 1,
              "offset": 38,
            },
            "start": {
              "column": 31,
              "line": 1,
              "offset": 30,
            },
          },
          "type": "field",
          "value": "19781012",
        },
        {
          "index": 8,
          "position": {
            "end": {
              "column": 41,
              "line": 1,
              "offset": 40,
            },
            "start": {
              "column": 40,
              "line": 1,
              "offset": 39,
            },
          },
          "type": "field",
          "value": "M",
        },
      ],
      "delimiter": "|",
      "index": 0,
      "name": "PID",
      "position": {
        "end": {
          "column": 41,
          "line": 1,
          "offset": 40,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "segment",
    },
  ],
  "delimiter": "
",
  "position": {
    "end": {
      "column": 41,
      "line": 1,
      "offset": 40,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;
